==> MikroElektronika/mikrosdk_v2/targets/avr_8bit/mikroe/avr/src/tim/implementation_1/hal_ll_tim.c <==
#include "hal_ll_tim.h"
#include "hal_ll_gpio.h"
#include "hal_ll_tim_pin_map.h"
#define HAL_LL_TIM_8_BIT_MODULE_0 (0)
#define HAL_LL_TIM_8_BIT_MODULE_2 (2)
#define hal_ll_tim_get_base_struct(_handle) ((hal_ll_tim_base_handle_t *)_handle)
#define hal_ll_tim_get_module_state_address ((hal_ll_tim_handle_register_t *)*handle)
#define hal_ll_tim_get_handle ( hal_ll_tim_handle_register_t * )hal_ll_tim_get_module_state_address->hal_ll_tim_handle
#define hal_ll_tim_get_base_from_hal_handle ((hal_ll_tim_hw_specifics_map_t *)((hal_ll_tim_handle_register_t *)\
                                            (((hal_ll_tim_handle_register_t *)(handle))->hal_ll_tim_handle))->hal_ll_tim_handle)->base
#define HAL_LL_TIM_PRESCALER_REG_VALUE_1 (1)
#define HAL_LL_TIM_PRESCALER_REG_VALUE_5 (5)
#define HAL_LL_TIM_PRESCALER_REG_VALUE_7 (7)
#define HAL_LL_TIM_PRESCALER_REG_VALUE_DEFAULT (1)
#define HAL_LL_TIM_8_BIT_TIMER_STOPPED (0x07)
#define HAL_LL_TIM_16_BIT_TIMER_STOPPED (0x30)
#define HAL_LL_TIM_8_BIT_MASK (0xFF)
#define HAL_LL_TIM_8_BIT_SHIFT (8)
#define HAL_LL_TIM_FORCE_OUTPUT_COMPARE_MATCH_BIT (7)
#define HAL_LL_TIM_DUTY_RATIO_MAX (1.0)
#define HAL_LL_TIM_DUTY_RATIO_MIN (0.0)
#define HAL_LL_TIM_8_BIT_RESOLUTION (255)
#define HAL_LL_TIM_8_BIT_RESOLUTION_MASK (256)
#define HAL_LL_TIM_10_BIT_RESOLUTION (1024)
#define HAL_LL_TIM_10_BIT_PWM_RESOLUTION_MASK (0x03)
#define HAL_LL_TIM_PWM_NON_INVERTING_MODE_BIT_0 (4)
#define HAL_LL_TIM_PWM_NON_INVERTING_MODE_BIT_1 (5)

hal_ll_err_t hal_ll_tim_register_handle( hal_ll_pin_name_t pin, hal_ll_tim_handle_register_t *handle_map, uint8_t *hal_module_id ) {
    uint8_t pin_check_result;
    uint8_t index;

    if (  HAL_LL_PIN_NC == ( pin_check_result = _hal_ll_tim_check_pin( pin, &index, handle_map ) ) ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    if ( ( hal_ll_tim_hw_specifics_map[ pin_check_result ].pin != pin ) ) {
        _hal_ll_tim_map_pin( pin_check_result, index );

        handle_map[ pin_check_result ]->init_ll_state = false;

        hal_ll_module_state[ pin_check_result ].init_ll_state = false;

        /*!< @brief Variable holding last set clock divider for given module. */
        hal_ll_tim_hw_specifics_map->clock_divider = HAL_LL_TIM_PRESCALER_REG_VALUE_DEFAULT;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle = ( handle_t * )&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;

    handle_map[ pin_check_result ]->hal_ll_tim_handle = ( handle_t *)&hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle;

    return HAL_LL_TIM_SUCCESS;
}

uint32_t hal_ll_tim_set_freq( handle_t *handle, uint32_t freq_hz ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    low_level_handle->init_ll_state = false;

    hal_ll_tim_hw_specifics_map_local->freq_hz = freq_hz;

    _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );

    // Configure PWM prescaler value (via function pointers).
    ( hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_set_prescaler )
    ( hal_ll_tim_hw_specifics_map_local->base );

    low_level_handle->init_ll_state = true;

    return hal_ll_tim_hw_specifics_map_local->max_period;
}

hal_ll_err_t hal_ll_tim_set_duty( handle_t *handle, float duty_ratio ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    if ( low_level_handle->init_ll_state == false ) {
        _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );
        low_level_handle->init_ll_state = true;
    }

    // Set appropriate PWM duty cycle (via function pointers).
    ( hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_set_duty )
    ( hal_ll_tim_hw_specifics_map_local->base, duty_ratio );

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_start( handle_t *handle ) {
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    // Enable PWM driver circuit, non-inverting submode (via function pointers).
    ( hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_signal_start )
    ( hal_ll_tim_hw_specifics_map_local->base, hal_ll_tim_hw_specifics_map_local->clock_divider );

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_stop( handle_t *handle ) {
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    // Disconnect PWM driver circuit (via function pointers).
    ( hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_signal_stop )
    ( hal_ll_tim_hw_specifics_map_local->base );

    return HAL_LL_TIM_SUCCESS;
}

void hal_ll_tim_close( handle_t *handle ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );

    if( low_level_handle->hal_ll_tim_handle != NULL ) {

        low_level_handle->hal_ll_tim_handle = NULL;
        low_level_handle->hal_drv_tim_handle = NULL;
        low_level_handle->init_ll_state = false;

        _hal_ll_tim_configure_pin( hal_ll_tim_hw_specifics_map_local, false );

        hal_ll_tim_hw_specifics_map_local->freq_hz = 0;
        hal_ll_tim_hw_specifics_map_local->max_period = 0;
        hal_ll_tim_hw_specifics_map_local->pin = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->clock_divider = HAL_LL_TIM_PRESCALER_REG_VALUE_DEFAULT;
        hal_ll_tim_hw_specifics_map_local->channel = HAL_LL_TIM_CH_DEFAULT;
    }
}

static void _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_t *map ) {
    // Configure PWM pin.
    _hal_ll_tim_configure_pin( hal_ll_tim_hw_specifics_map_local, true );

    // Hardware initialization of a Timer/Counter (PWM) module (via function pointers).
    ( hal_ll_tim_hw_specifics_map_local->mapped_functions.mapped_function_hw_init_pwm_mode )
    ( hal_ll_tim_hw_specifics_map_local->base );
}
