==> MikroElektronika/mikrosdk_v2/targets/pic_32bit/mikroe/pic32/src/tim/implementation_1/hal_ll_tim.c <==
#include "hal_ll_tim.h"
#include "hal_ll_gpio.h"
#include "hal_ll_pps.h"
#include "hal_ll_tim_pin_map.h"
#define HAL_LL_TIM_PRESCALER_1                                                  0
#define HAL_LL_TIM_PRESCALER_2                                                  1
#define HAL_LL_TIM_PRESCALER_4                                                  2
#define HAL_LL_TIM_PRESCALER_8                                                  3
#define HAL_LL_TIM_PRESCALER_16                                                 4
#define HAL_LL_TIM_PRESCALER_32                                                 5
#define HAL_LL_TIM_PRESCALER_64                                                 6
#define HAL_LL_TIM_PRESCALER_256                                                7
#define HAL_LL_TIM_PRESCALER_1_VALUE                                            1
#define HAL_LL_TIM_PRESCALER_2_VALUE                                            2
#define HAL_LL_TIM_PRESCALER_4_VALUE                                            4
#define HAL_LL_TIM_PRESCALER_8_VALUE                                            8
#define HAL_LL_TIM_PRESCALER_16_VALUE                                           16
#define HAL_LL_TIM_PRESCALER_32_VALUE                                           32
#define HAL_LL_TIM_PRESCALER_64_VALUE                                           64
#define HAL_LL_TIM_PRESCALER_256_VALUE                                          256

hal_ll_err_t hal_ll_tim_register_handle( hal_ll_pin_name_t pin, hal_ll_tim_handle_register_t *handle_map,
                                                               uint8_t *hal_module_id ) {
    uint16_t pin_check_result;
    uint8_t index;

    if ( ( pin_check_result = _hal_ll_tim_check_pin( pin, &index, handle_map ) ) == HAL_LL_PIN_NC ) {
        return HAL_LL_TIM_WRONG_PIN;
    }

    if ( ( hal_ll_tim_hw_specifics_map[ pin_check_result ].pin != pin ) ) {
        // Used only for chips which have TIM PPS pins
        #if HAL_LL_TIM_PPS_ENABLED == true
        // Clear previous module pps
        _hal_ll_pps_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], false );
        #endif

        // Map new pps
        _hal_ll_tim_map_pin( pin_check_result, index );

        #if HAL_LL_TIM_PPS_ENABLED == true
        _hal_ll_pps_set_state( &hal_ll_tim_hw_specifics_map[ pin_check_result ], true );
        #endif

        handle_map[ pin_check_result ]->init_ll_state = false;
        hal_ll_module_state[ pin_check_result ].init_ll_state = false;
    }

    *hal_module_id = pin_check_result;
    hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle = ( handle_t * )&hal_ll_tim_hw_specifics_map[ pin_check_result ].base;
    handle_map[ pin_check_result ]->hal_ll_tim_handle = ( handle_t *)&hal_ll_module_state[ pin_check_result ].hal_ll_tim_handle;

    return HAL_LL_TIM_SUCCESS;
}

uint32_t hal_ll_tim_set_freq( handle_t *handle, uint32_t freq_hz ) {
    uint32_t tmp_period;
    uint32_t tmp_freq;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    low_level_handle->init_ll_state = false;

    tmp_period=_hal_ll_tim_freq_formula( freq_hz, HAL_LL_TIM_FREQ_PRESCALER_16 );
    write_reg_bitwise_and( tim_regs_map[hal_ll_tim_hw_specifics_map_local->timer].hal_tcon_reg_addr, HAL_LL_TIM_TMRON_BIT );

    clear_reg(&hal_ll_hw_reg->hal_ocrs_reg_addr);

    hal_ll_tim_stop(handle);

    if ( tmp_period > UINT16_MAX ) {
        tmp_freq = _hal_ll_tim_get_freq;
        hal_ll_tim_hw_specifics_map_local->freq_hz = tmp_freq;
    } else {
        tmp_freq = freq_hz;
        hal_ll_tim_hw_specifics_map_local->freq_hz = freq_hz;
    }

    _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_local );

    low_level_handle->init_ll_state = true;

    return tmp_freq;
}

hal_ll_err_t hal_ll_tim_set_duty( handle_t *handle, float duty_ratio ) {
    float tmp_duty;
    uint32_t max_duty = 0;
    uint16_t max_period;

    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    max_period = hal_ll_tim_hw_specifics_map_local->max_period;
    tmp_duty = duty_ratio * 100;
    max_duty = ( ( float )max_period / 100 ) * tmp_duty;
    hal_ll_hw_reg->hal_ocrs_reg_addr= max_duty;

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_start( handle_t *handle ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    hal_ll_hw_reg->hal_occon_reg_addr |= HAL_LL_TIM_START;

    return HAL_LL_TIM_SUCCESS;
}

hal_ll_err_t hal_ll_tim_stop( handle_t *handle ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics( hal_ll_tim_get_module_state_address );
    hal_ll_tim_base_handle_t *hal_ll_hw_reg = hal_ll_tim_get_base_struct( hal_ll_tim_hw_specifics_map_local->base );

    hal_ll_hw_reg->hal_occon_reg_addr &= HAL_LL_TIM_STOP;

    return HAL_LL_TIM_SUCCESS;
}

void hal_ll_tim_close( handle_t *handle ) {
    low_level_handle = hal_ll_tim_get_handle;
    hal_ll_tim_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_tim_get_module_state_address );

    if( low_level_handle->hal_ll_tim_handle != NULL ) {
        low_level_handle->hal_ll_tim_handle = NULL;
        low_level_handle->hal_drv_tim_handle = NULL;
        low_level_handle->init_ll_state = false;

        _hal_ll_tim_configure_pin( hal_ll_tim_hw_specifics_map_local, false );

        #ifdef HAL_LL_PERIPHERAL_MODULE_DISABLE
        _hal_ll_tim_set_module_state( hal_ll_tim_hw_specifics_map_local->module_index, false );
        #endif

        hal_ll_tim_hw_specifics_map_local->freq_hz = 0;
        hal_ll_tim_hw_specifics_map_local->timer = 0xFF;
        hal_ll_tim_hw_specifics_map_local->max_period = 0;
        hal_ll_tim_hw_specifics_map_local->pin = HAL_LL_PIN_NC;
        hal_ll_tim_hw_specifics_map_local->module_index = HAL_LL_MODULE_ERROR;
    }
}

static void _hal_ll_tim_init( hal_ll_tim_hw_specifics_map_t *map ) {
    #ifdef HAL_LL_PERIPHERAL_MODULE_DISABLE
    _hal_ll_tim_set_module_state( map, true );
    #endif

    _hal_ll_tim_configure_pin( hal_ll_tim_hw_specifics_map_local, true );

    // Used only for chips which have TIM PPS pins
    #if HAL_LL_TIM_PPS_ENABLED == true
    // Set pps functions for mapped pins
    _hal_ll_pps_set_state( map, true );
    #endif

    _hal_ll_tim_hw_init( map );
}
